app/components/shared/TxHistory/TxHistory.module.css
.eligible {
  display: grid;
  grid-template-columns: repeat(6, minmax(0, 1fr));
}

.voteChoice > * {
  box-sizing: border-box;
}

.yes,
.no {
  margin: -5px 0 0 0 !important;
}

.yes > label > span:nth-child(1) {
  border-color: var(--vote-yes-color);
}

.yes > label > span:nth-child(2) {
  background-color: var(--vote-yes-color);
}

.no > label > span:nth-child(1) {
  border-color: var(--vote-no-color);
}

.no > label > span:nth-child(2) {
  background-color: var(--vote-no-color);
}

.icon {
  float: left;
  width: 20px;
  height: 20px;
  background-repeat: no-repeat;
  background-size: 20px 20px;
}

.icon.sent {
  background-image: var(--minus-small-icon);
}
.icon.received,
.icon.coinbase {
  background-image: var(--plus-small-icon);
}
.icon.transfer {
  background-image: var(--transfer-transaction-icon);
}
.icon.unknown,
.icon.ticket {
  background-image: var(--ticket-live-icon);
}
.icon.live {
  background-image: var(--ticket-live-icon);
}
.icon.vote {
  background-image: var(--ticket-voted-icon);
}
.icon.voted {
  background-image: var(--ticket-voted-icon);
}
.icon.revocation {
  background-image: var(--ticket-revoked-icon);
}
.icon.revoked {
  background-image: var(--ticket-revoked-icon);
}
.icon.immature {
  background-image: var(--ticket-immature-icon);
}
.icon.missed {
  background-image: var(--ticket-missed-icon);
}
.icon.expired {
  background-image: var(--ticket-expired-icon);
}
.icon.unmined {
  background-image: var(--ticket-unmined-icon);
}

.amountValue {
  font-size: 15px;
  font-family: var(--font-family-regular-semi-bold);
  margin-left: 10px;
}

.info {
  display: grid;
  grid-template-columns: 0.5fr 3fr 10fr 3fr;
  width: 100%;
}

.overviewInfo {
  display: grid;
  grid-template-columns: 1fr 8fr 8fr;
}

.overviewInfo .txDirection {
  align-self: center;
  order: 4;
  grid-column-start: 1;
  justify-self: left;
  grid-column-end: 4;
  font-size: 11px;
  padding-bottom: 3px;
  color: var(--overview-balance-label) !important;
  font-family: var(--font-family-monospace);
}

.overviewInfo .txDirection .accountName {
  background: transparent;
  padding: 0 3px;
  height: 20px;
}

.status {
  text-align: right;
  margin-left: 5px;
  max-width: 210px;
}

.txDirection {
  justify-self: right;
}

.accountName {
  background-color: var(--transaction-account-name-bg);
  padding: 2px 4px;
  border-radius: 5px;
  font-size: 11px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin-right: 20px;
  height: 15px;
  max-width: 210px;
}

.timeDateSpacer {
  font-size: 11px;
  text-align: right;
}

.overviewPending .txInfo {
  width: 100%;
}

.myTickets {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 2fr 1fr 1fr;
  width: 100%;
}

.myTickets.overview {
  grid-template-columns: 1fr 1fr 1fr;
  padding-bottom: 1rem;
  font-size: 11px;
  align-items: center;
  color: var(--overview-balance-label) !important;
  font-family: var(--font-family-monospace);
}

.stakeType {
  font-family: var(--font-family-regular);
  color: var(--input-color-default);
  font-size: 15px;
  margin-left: 10px;
}

.stakeType:not(.overview) {
  padding-top: 4px;
}

.priceReward {
  display: flex;
  font-family: var(--font-family-regular);
  color: var(--settings-desc);
  font-size: 12px;
  margin-left: 30px;
}

.ticketReward {
  background-image: var(--ticket-reward-icon);
  background-repeat: no-repeat;
  background-size: 11px 11px;
  background-position: 0px 4px;
  padding-left: 16px;
}

.daysToVote {
  background-image: var(--time-lock-icon);
  background-repeat: no-repeat;
  background-size: 12px 12px;
  background-position: 0px 4px;
  padding-left: 14px;
  margin-left: 10px;
}

.noBold {
  font-weight: 400 !important;
}

.myTickesPrice {
  font-size: 15px;
}

.overviewRow {
  width: 368px;
  height: 54px;
  background: var(--background-back-color);
  border-bottom: 1px solid var(--disabled-background-color);
  cursor: pointer;
}

.txInfo {
  display: flex;
}

.overviewRow .txInfo .txRowWrapper {
  display: flex;
  flex-direction: column;
  padding: 10px;
  flex-basis: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.pendingOverviewDetails {
  background-color: var(--disabled-background-color-lighter);
  background-image: var(--pending-animation);
  background-size: 14px;
  background-position: 50%;
  background-repeat: no-repeat;
  width: 40px;
  flex-basis: 40px;
  height: 54px;
  cursor: pointer;
  text-align: center;
}

.overviewRow .timeDateSpacer {
  margin-left: auto;
}

.historyRow {
  background-image: var(--arrow-right-gray-icon);
  background-position: 98%;
  background-size: 5px;
  background-repeat: no-repeat;
  border-bottom: 1px solid var(--disabled-background-color);
  background-color: var(--background-back-color);
  cursor: pointer;
  height: 54px;
}

.historyRow:hover {
  background-image: var(--arrow-right-blue-icon);
  background-color: var(--tx-history-background-hover);
}

.historyRow .txInfo {
  width: 100%;
  justify-content: space-between;
}

.historyRow .txInfo .txRowWrapper {
  padding: 16px 20px;
  width: 90%;
}

.eligibleRow {
  background-position: 688px;
}

.overviewRow .txInfo .ticketStatus {
  grid-column-start: 1;
  grid-column-end: 2;
  color: var(--input-color-default);
}

.overviewRow .txInfo .myTickets .timeDateSpacer {
  grid-column-end: 4;
  grid-row-start: 1;
  grid-column-start: 2;
  justify-self: right;
  background: none;
  color: var(--input-color-default);
}

.overviewRow .txInfo .stakeAccount {
  display: none !important;
}

@media screen and (max-width: 1179px) {
  .overviewRow {
    width: 315px;
  }
}

@media screen and (max-width: 768px) {
  .historyRow {
    width: 100%;
  }
  .accountName {
    background: transparent;
    padding: 0 3px;
    height: 20px;
  }
  .status {
    padding-top: 0px;
  }
  .txDirection {
    align-self: center;
    order: 4;
    grid-column-start: 1;
    justify-self: left;
    grid-column-end: 4;
    font-size: 11px;
    padding-bottom: 3px;
    color: var(--overview-balance-label) !important;
    font-family: var(--font-family-monospace);
  }
  .txRowWrapper {
    padding: 5px 20px 27px 20px !important;
  }
  .info {
    grid-template-columns: 0.5fr 3fr 3fr;
    padding-bottom: 1rem;
  }
  .myTickets {
    grid-template-columns: 1fr 1fr 1fr;
    padding-bottom: 1rem;
    font-size: 11px;
    align-items: stretch;
    color: var(--overview-balance-label) !important;
    font-family: var(--font-family-monospace);
  }

  .ticketStatus {
    grid-column-start: 1;
    grid-column-end: 2;
    color: var(--input-color-default);
  }
  .stakeAccount {
    display: none !important;
  }
  .myTickets .timeDateSpacer {
    grid-column-end: 4;
    grid-row-start: 1;
    grid-column-start: 2;
    justify-self: right;
    background: none;
    color: var(--input-color-default);
  }
}

